dataset1235/2025-2/805158916/users/1651421245/executions/1584167357_1026882843.log
== SUBMISSION (2025-08-27 15:10:46)
-- CODE: 
import pi.maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:50:27)
-- CODE: 
import pi maht
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:16:12)
-- CODE: 

raio = float(input("digite o valor do raio"))
import.pi 
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:13:52)
-- CODE: 
import maht 
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:16:12)
-- CODE: 

raio = float(input("digite o valor do raio"))
import.pi 
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 3
    import.pi 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:14:00)
-- CODE: 
import maht 
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:49:53)
-- CODE: 
import maht
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht
ModuleNotFoundError: No module named 'maht'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:13:59)
-- CODE: 
import maht 
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:13:17)
-- CODE: 
importpi. maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:14:00)
-- CODE: 
import maht 
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import maht 
    ^^^^^^^^^^^
ModuleNotFoundError: No module named 'maht'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:49:43)
-- CODE: 
import mart
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import mart
ModuleNotFoundError: No module named 'mart'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import mart
ModuleNotFoundError: No module named 'mart'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import mart
ModuleNotFoundError: No module named 'mart'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import mart
ModuleNotFoundError: No module named 'mart'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import mart
ModuleNotFoundError: No module named 'mart'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import mart
ModuleNotFoundError: No module named 'mart'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:50:58)
-- CODE: 
import pi.maht
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:50:29)
-- CODE: 
import pi maht
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 1
    import pi maht
              ^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:22:12)
-- CODE: 
import math
raio = float(input("digite o valor do raio"))
area = math.pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
digite o valor do raio0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
digite o valor do raio32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
digite o valor do raio38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
digite o valor do raio452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
digite o valor do raio221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
digite o valor do raio346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:10:50)
-- CODE: 
import pi.maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:13:15)
-- CODE: 
importpi. maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:13:09)
-- CODE: 
import pi. maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:50:09)
-- CODE: 
importpi. maht
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:13:16)
-- CODE: 
importpi. maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    importpi. maht
    ^^^^^^^^
NameError: name 'importpi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:50:59)
-- CODE: 
import pi.maht
raio = float(input("digite o valor do raio"))
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi.maht
ModuleNotFoundError: No module named 'pi'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 15:13:09)
-- CODE: 
import pi. maht
raio = float(input("digite o valor do raio"))
area = pi * (raio)**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    import pi. maht
ModuleNotFoundError: No module named 'pi'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
